--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Tree</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+    <title>Tree</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<canvas id="Tree"></canvas>
-	<script type="text/javascript" src="script.js"></script>
+    <canvas id="tree"></canvas>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
