Improved people rendering

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div id="cover"></div>
     <canvas id="tree"></canvas>
     <script type="text/javascript" src="script.js"></script>
 </body>
