--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Tree</title>
+    <title>Scape</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
